# rss-reader

./: .gitignore  2026-02-10-mvp-validation-and-feature-completion.md  SPEC.md  docker-compose.yml  opus-all-sources.md  research-hn.md  research-reddit.md  research-web.md  rss-sources-explorer.html  rss-sources-report-opus.md  待解决问题.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  email_account.py  entry.py  feed.py  group.py  user.py  user_entry_state.py
backend/app/routers/: email_accounts.py  entries.py  feeds.py  groups.py
backend/app/schemas/: email_account.py  entry.py  feed.py  group.py
backend/app/services/: content_service.py  dedup_service.py  discovery_service.py  email_service.py  entry_service.py  feed_service.py  fetch_service.py  group_service.py  opml_service.py  platform_detector.py  search_service.py
backend/app/tasks/: jobs.py
backend/app/utils/: http_client.py  seed.py
backend/migrations/: env.py
backend/migrations/versions/: 961476f54aed_initial_tables.py  99008f5ecdaa_merge_batch2_fulltext_and_nonrss.py  a2b3c4d5e6f7_add_fts5_search_and_feed_type.py  b3c4d5e6f7g8_gmail_oauth_migration.py  c4d5e6f7g8h9_fulltext_enhancement_fields.py  d5e6f7g8h9i0_add_platform_detection_fields.py  e6f7g8h9i0j1_add_simhash_dedup_fields.py
backend/tests/: test_content_service.py  test_dedup_service.py  test_email_extraction.py  test_opml_service.py  test_platform_detector.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.tsx  (+1 more)
(+46 files in other folders)
